src/test/ui/error-codes/E0423.stderr
error[E0423]: expected function, found struct `Foo`
  --> $DIR/E0423.rs:14:13
   |
LL |     let f = Foo(); //~ ERROR E0423
   |             ^^^ did you mean `Foo { /* fields */ }`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
